--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,8 +10,7 @@ order: 1
   <h2 class="alt">Hi! I'm <strong>Roxanne</strong>, a UI, UX and game designer based in Toronto.
 </header>
 
-<!--
+
  <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+  <!-- <a href="#portfolio" class="button scrolly">Welcome!</a> -->
 </footer>
-––>
